UI Tabs, edge flicker fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -144,8 +144,11 @@ kbd {
     white-space: nowrap;
 }
 
-
-/*by MaciekTk88*/
+#brushPreview{
+    float: right;
+    width: 90px;
+    height: 90px;
+}
 
 .slider > input {
     -webkit-appearance: none;
@@ -167,30 +170,6 @@ kbd {
     opacity: 10;
 }
 
-.slider5 {
-    -webkit-appearance: none; /* Override default CSS styles */
-    width: 180px;
-    height: 20px;
-    background: #ffffff;
-    outline: none;
-    opacity: 0.8; /* Set transparency (for mouse-over effects on hover) */
-    -webkit-transition: .0s; /* 0.2 seconds transition on hover */
-    transition: opacity .0s;
-    border-radius: 25px;
-}
-
-.slider6 {
-    -webkit-appearance: none; /* Override default CSS styles */
-    width: 180px;
-    height: 20px;
-    background: #ffffff;
-    outline: none;
-    opacity: 0.8; /* Set transparency (for mouse-over effects on hover) */
-    -webkit-transition: .0s; /* 0.2 seconds transition on hover */
-    transition: opacity .0s;
-    border-radius: 25px;
-}
-
 #wrapper {
     position: absolute;
     width: 100%;
@@ -200,7 +179,7 @@ kbd {
     align-items: center;
 }
 
-    #wrapper > section {
+    #wrapper section {
         padding: 20px;
         margin-top: 1em;
         width: 90%;
@@ -210,17 +189,39 @@ kbd {
         background-color: rgb(100, 100, 100);
     }
 
+    #wrapper nav {
+        margin-top: 1em;
+        width: 98%;
+    }
+
+.tab button {
+    background-color: gray;
+    float: left;
+    border: 4px solid lightblue;
+    border-radius: 10px 10px 0px 0px;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    width: 50%;
+}
+
+    .tab button.active {
+        background-color: #ccc;
+    }
+
+    .tab button:hover {
+        background-color: #aaa;
+    }
+
 #kwadratowypedzelid {
     height: 25px;
     width: 25px;
 }
 
 #circle {
-    height: 50px;
-    width: 50px;
+    position: relative;
     background-color: #ffffff;
     border-radius: 50%;
-    float: right;
 }
 
 h1 {
@@ -280,11 +281,5 @@ h1 {
     font-size: 40px;
     color: lightblue;
     font-family: Impact
-}
-
-.suwaki3 {
-    position: absolute;
-    left: 33px;
-    top: 100px;
 }
 
